Improvements about displaying Product.Image

--- a/Source/CP.i8n/CommonStrings.resx
+++ b/Source/CP.i8n/CommonStrings.resx
@@ -179,6 +179,10 @@
 		<value>Not Picked</value>
 	</data>
 
+	<data name="ProductImage" xml:space="preserve">
+		<value>Product Image</value>
+	</data>
+
 	<data name="Record" xml:space="preserve">
 		<value>Record</value>
 	</data>
