Entity types POAttachment + POImage added to project

--- a/Source/CP.i8n/CommonStrings.tr.resx
+++ b/Source/CP.i8n/CommonStrings.tr.resx
@@ -180,7 +180,7 @@
 	</data>
 
 	<data name="ProductImage" xml:space="preserve">
-		<value>Product Image</value>
+		<value>Ürün Resmi</value>
 	</data>
 
 	<data name="Record" xml:space="preserve">
