--- a/Source/CP.i8n/EntityStrings.tr.Resx
+++ b/Source/CP.i8n/EntityStrings.tr.Resx
@@ -159,6 +159,14 @@
 		<value>Yeni Üretici Ekle</value>
 	</data>
 
+	<data name="AddNewPOAttachment" xml:space="preserve">
+		<value>Yeni Sipariş Eklentisi Ekle</value>
+	</data>
+
+	<data name="AddNewPOImage" xml:space="preserve">
+		<value>Yeni Sipariş Resmi Ekle</value>
+	</data>
+
 	<data name="AddNewProcess" xml:space="preserve">
 		<value>Yeni Süreç Ekle</value>
 	</data>
@@ -205,6 +213,14 @@
 
 	<data name="AddNewSupplier" xml:space="preserve">
 		<value>Yeni Tedarikçi Ekle</value>
+	</data>
+
+	<data name="AddPOAttachment" xml:space="preserve">
+		<value>Sipariş Eklentisi Ekle</value>
+	</data>
+
+	<data name="AddPOImage" xml:space="preserve">
+		<value>Sipariş Resmi Ekle</value>
 	</data>
 
 	<data name="AddProcess" xml:space="preserve">
@@ -285,6 +301,14 @@
 
 	<data name="AddRemoveManufacturer" xml:space="preserve">
 		<value>Üretici Ekle/Çıkar</value>
+	</data>
+
+	<data name="AddRemovePOAttachment" xml:space="preserve">
+		<value>Sipariş Eklentisi Ekle/Çıkar</value>
+	</data>
+
+	<data name="AddRemovePOImage" xml:space="preserve">
+		<value>Sipariş Resmi Ekle/Çıkar</value>
 	</data>
 
 	<data name="AddRemoveProcess" xml:space="preserve">
@@ -397,6 +421,10 @@
 
 	<data name="AspNetUsersList" xml:space="preserve">
 		<value>Uygulama Kullanıcısı Listesi</value>
+	</data>
+
+	<data name="Attachments" xml:space="preserve">
+		<value>Eklentiler</value>
 	</data>
 
 	<data name="BuyingCurrency" xml:space="preserve">
@@ -583,6 +611,14 @@
 		<value>Üretici Oluştur</value>
 	</data>
 
+	<data name="CreatePOAttachment" xml:space="preserve">
+		<value>Sipariş Eklentisi Oluştur</value>
+	</data>
+
+	<data name="CreatePOImage" xml:space="preserve">
+		<value>Sipariş Resmi Oluştur</value>
+	</data>
+
 	<data name="CreateProcess" xml:space="preserve">
 		<value>Süreç Başlat</value>
 	</data>
@@ -767,6 +803,14 @@
 		<value>Üreticiyi Sil</value>
 	</data>
 
+	<data name="DeletePOAttachment" xml:space="preserve">
+		<value>Sipariş Eklentisini Sil</value>
+	</data>
+
+	<data name="DeletePOImage" xml:space="preserve">
+		<value>Sipariş Resmini Sil</value>
+	</data>
+
 	<data name="DeleteProcess" xml:space="preserve">
 		<value>Süreci Sil</value>
 	</data>
@@ -927,6 +971,14 @@
 		<value>Üreticiyi Düzenle</value>
 	</data>
 
+	<data name="EditPOAttachment" xml:space="preserve">
+		<value>Sipariş Eklentisini Düzenle</value>
+	</data>
+
+	<data name="EditPOImage" xml:space="preserve">
+		<value>Sipariş Resmini Düzenle</value>
+	</data>
+
 	<data name="EditProcess" xml:space="preserve">
 		<value>Süreci Düzenle</value>
 	</data>
@@ -1015,6 +1067,22 @@
 		<value>Kumaş İçeriği</value>
 	</data>
 
+	<data name="FileName" xml:space="preserve">
+		<value>Dosya Adı</value>
+	</data>
+
+	<data name="FileTitle" xml:space="preserve">
+		<value>Dosya Başlığı</value>
+	</data>
+
+	<data name="FileType" xml:space="preserve">
+		<value>Dosya Türü</value>
+	</data>
+
+	<data name="FileUrl" xml:space="preserve">
+		<value>Dosya Yolu</value>
+	</data>
+
 	<data name="FirstName" xml:space="preserve">
 		<value>Ad</value>
 	</data>
@@ -1049,6 +1117,14 @@
 
 	<data name="IgnoreInRepeat" xml:space="preserve">
 		<value>Tekrarda Görme</value>
+	</data>
+
+	<data name="Images" xml:space="preserve">
+		<value>Resimler</value>
+	</data>
+
+	<data name="ImageTitle" xml:space="preserve">
+		<value>Resim Başlığı</value>
 	</data>
 
 	<data name="ImageUrl" xml:space="preserve">
@@ -1259,6 +1335,30 @@
 		<value>İş Telefonu 2</value>
 	</data>
 
+	<data name="POAttachment" xml:space="preserve">
+		<value>Sipariş Eklentisi</value>
+	</data>
+
+	<data name="POAttachments" xml:space="preserve">
+		<value>Sipariş Eklentileri</value>
+	</data>
+
+	<data name="POAttachmentsList" xml:space="preserve">
+		<value>Sipariş Eklenti Listesi</value>
+	</data>
+
+	<data name="POImage" xml:space="preserve">
+		<value>Sipariş Resmi</value>
+	</data>
+
+	<data name="POImages" xml:space="preserve">
+		<value>Sipariş Resimleri</value>
+	</data>
+
+	<data name="POImagesList" xml:space="preserve">
+		<value>Sipariş Resim Listesi</value>
+	</data>
+
 	<data name="PoNr" xml:space="preserve">
 		<value>Sipariş Kodu</value>
 	</data>
@@ -1457,6 +1557,14 @@
 
 	<data name="RemoveManufacturer" xml:space="preserve">
 		<value>Üreticiyi Çıkar</value>
+	</data>
+
+	<data name="RemovePOAttachment" xml:space="preserve">
+		<value>Sipariş Eklentisini Çıkar</value>
+	</data>
+
+	<data name="RemovePOImage" xml:space="preserve">
+		<value>Sipariş Resmini Çıkar</value>
 	</data>
 
 	<data name="RemoveProcess" xml:space="preserve">
