--- a/Source/CP.i8n/EntityStrings.Resx
+++ b/Source/CP.i8n/EntityStrings.Resx
@@ -475,6 +475,10 @@
 		<value>Cancelled User Ip</value>
 	</data>
 
+	<data name="Capacity" xml:space="preserve">
+		<value>Capacity</value>
+	</data>
+
 	<data name="Caption" xml:space="preserve">
 		<value>Caption</value>
 	</data>
