--- a/Source/CP.i8n/EntityStrings.tr.Resx
+++ b/Source/CP.i8n/EntityStrings.tr.Resx
@@ -475,6 +475,10 @@
 		<value>İptal Eden Kullanıcı IP</value>
 	</data>
 
+	<data name="Capacity" xml:space="preserve">
+		<value>Kapasite</value>
+	</data>
+
 	<data name="Caption" xml:space="preserve">
 		<value>Etiket</value>
 	</data>
