--- a/Source/CP.i8n/EntityStrings.tr.Resx
+++ b/Source/CP.i8n/EntityStrings.tr.Resx
@@ -167,6 +167,10 @@
 		<value>Yeni Sipariş Resmi Ekle</value>
 	</data>
 
+	<data name="AddNewPOSizeRatio" xml:space="preserve">
+		<value>Yeni Assorti Ekle</value>
+	</data>
+
 	<data name="AddNewProcess" xml:space="preserve">
 		<value>Yeni Süreç Ekle</value>
 	</data>
@@ -199,10 +203,6 @@
 		<value>Yeni Sipariş Ekle</value>
 	</data>
 
-	<data name="AddNewSizeRatio" xml:space="preserve">
-		<value>Yeni Assorti Ekle</value>
-	</data>
-
 	<data name="AddNewSizing" xml:space="preserve">
 		<value>Yeni Ölçülendirme Ekle</value>
 	</data>
@@ -221,6 +221,10 @@
 
 	<data name="AddPOImage" xml:space="preserve">
 		<value>Sipariş Resmi Ekle</value>
+	</data>
+
+	<data name="AddPOSizeRatio" xml:space="preserve">
+		<value>Assorti Ekle</value>
 	</data>
 
 	<data name="AddProcess" xml:space="preserve">
@@ -311,6 +315,10 @@
 		<value>Sipariş Resmi Ekle/Çıkar</value>
 	</data>
 
+	<data name="AddRemovePOSizeRatio" xml:space="preserve">
+		<value>Assorti Ekle/Çıkar</value>
+	</data>
+
 	<data name="AddRemoveProcess" xml:space="preserve">
 		<value>Süreç Ekle/Çıkar</value>
 	</data>
@@ -343,10 +351,6 @@
 		<value>Sipariş Ekle/Çıkar</value>
 	</data>
 
-	<data name="AddRemoveSizeRatio" xml:space="preserve">
-		<value>Assorti Ekle/Çıkar</value>
-	</data>
-
 	<data name="AddRemoveSizing" xml:space="preserve">
 		<value>Ölçülendirme Ekle/Çıkar</value>
 	</data>
@@ -365,10 +369,6 @@
 
 	<data name="Address2" xml:space="preserve">
 		<value>Adres Satır 2</value>
-	</data>
-
-	<data name="AddSizeRatio" xml:space="preserve">
-		<value>Assorti Ekle</value>
 	</data>
 
 	<data name="AddSizing" xml:space="preserve">
@@ -623,6 +623,10 @@
 		<value>Sipariş Resmi Oluştur</value>
 	</data>
 
+	<data name="CreatePOSizeRatio" xml:space="preserve">
+		<value>Assorti Oluştur</value>
+	</data>
+
 	<data name="CreateProcess" xml:space="preserve">
 		<value>Süreç Başlat</value>
 	</data>
@@ -653,10 +657,6 @@
 
 	<data name="CreatePurchaseOrder" xml:space="preserve">
 		<value>Sipariş Oluştur</value>
-	</data>
-
-	<data name="CreateSizeRatio" xml:space="preserve">
-		<value>Assorti Oluştur</value>
 	</data>
 
 	<data name="CreateSizing" xml:space="preserve">
@@ -815,6 +815,10 @@
 		<value>Sipariş Resmini Sil</value>
 	</data>
 
+	<data name="DeletePOSizeRatio" xml:space="preserve">
+		<value>Assortiyi Sil</value>
+	</data>
+
 	<data name="DeleteProcess" xml:space="preserve">
 		<value>Süreci Sil</value>
 	</data>
@@ -845,10 +849,6 @@
 
 	<data name="DeletePurchaseOrder" xml:space="preserve">
 		<value>Siparişi Sil</value>
-	</data>
-
-	<data name="DeleteSizeRatio" xml:space="preserve">
-		<value>Assortiyi Sil</value>
 	</data>
 
 	<data name="DeleteSizing" xml:space="preserve">
@@ -983,6 +983,10 @@
 		<value>Sipariş Resmini Düzenle</value>
 	</data>
 
+	<data name="EditPOSizeRatio" xml:space="preserve">
+		<value>Assortiyi Düzenle</value>
+	</data>
+
 	<data name="EditProcess" xml:space="preserve">
 		<value>Süreci Düzenle</value>
 	</data>
@@ -1013,10 +1017,6 @@
 
 	<data name="EditPurchaseOrder" xml:space="preserve">
 		<value>Siparişi Düzenle</value>
-	</data>
-
-	<data name="EditSizeRatio" xml:space="preserve">
-		<value>Assortiyi Düzenle</value>
 	</data>
 
 	<data name="EditSizing" xml:space="preserve">
@@ -1375,6 +1375,18 @@
 		<value>Pozisyon</value>
 	</data>
 
+	<data name="POSizeRatio" xml:space="preserve">
+		<value>Assorti</value>
+	</data>
+
+	<data name="POSizeRatios" xml:space="preserve">
+		<value>Assortiler</value>
+	</data>
+
+	<data name="POSizeRatiosList" xml:space="preserve">
+		<value>Assorti Listesi</value>
+	</data>
+
 	<data name="Print" xml:space="preserve">
 		<value>Yazdır</value>
 	</data>
@@ -1571,6 +1583,10 @@
 		<value>Sipariş Resmini Çıkar</value>
 	</data>
 
+	<data name="RemovePOSizeRatio" xml:space="preserve">
+		<value>Assortiyi Çıkar</value>
+	</data>
+
 	<data name="RemoveProcess" xml:space="preserve">
 		<value>Süreci Çıkar</value>
 	</data>
@@ -1601,10 +1617,6 @@
 
 	<data name="RemovePurchaseOrder" xml:space="preserve">
 		<value>Siparişi Çıkar</value>
-	</data>
-
-	<data name="RemoveSizeRatio" xml:space="preserve">
-		<value>Assortiyi Çıkar</value>
 	</data>
 
 	<data name="RemoveSizing" xml:space="preserve">
@@ -1675,20 +1687,12 @@
 		<value>Nakliye Askıda / Katlanmış</value>
 	</data>
 
-	<data name="SizeRatio" xml:space="preserve">
-		<value>Assorti</value>
-	</data>
-
 	<data name="SizeRatioDivisor" xml:space="preserve">
 		<value>Assorti Paydası</value>
 	</data>
 
 	<data name="SizeRatios" xml:space="preserve">
 		<value>Assortiler</value>
-	</data>
-
-	<data name="SizeRatiosList" xml:space="preserve">
-		<value>Assorti Listesi</value>
 	</data>
 
 	<data name="Sizing" xml:space="preserve">
